--- a/client/templates/index.pug
+++ b/client/templates/index.pug
@@ -140,6 +140,13 @@ html(lang="en")
         ### In game screenshot:
       img(src="/static/hack-words-screenshot.png", style="width: 100%;")
     .box
+      a(href="https://ai-by-ai.com")
+        img(src="/static/ai-by-ai-logo.png", style="width: 100%;")
+      :plain-markdown
+        - [Ai-by-Ai](https://ai-by-ai.com) -  Using AI to create classical AIs at unprecedented scale!
+        ### ScreenShot:
+      img(src="/static/ai-by-ai-screenshot.png", style="width: 100%;")
+    .box
       a(href="https://jellyml.com")
         img(src="/static/jellyml-logo.png", style="width: 100%;")
       :plain-markdown
