--- a/client/templates/index.pug
+++ b/client/templates/index.pug
@@ -133,24 +133,24 @@ html(lang="en")
         - [Gizmodo](https://gizmodo.com/this-game-reimagines-pokemon-as-a-playable-font-where-c-1846520824)
         - [Hacker news](https://news.ycombinator.com/item?id=26495059)
     .box
-      a(href="https://hack-words.com")
+      a(href="https://mmulet.github.io/hack-words")
         img(src="/static/hack-words-logo.png", style="width: 100%;")
       :plain-markdown
-        - [Hack-Words](https://hack-words.com) -  An in-browser demo of compressed sensing presented as a riddle game.
+        - [Hack-Words](https://mmulet.github.io/hack-words) -  An in-browser demo of compressed sensing presented as a riddle game.
         ### In game screenshot:
       img(src="/static/hack-words-screenshot.png", style="width: 100%;")
     .box
-      a(href="https://ai-by-ai.com")
+      a(href="https://mmulet.github.io/ai-by-ai")
         img(src="/static/ai-by-ai-logo.png", style="width: 100%;")
       :plain-markdown
-        - [Ai-by-Ai](https://ai-by-ai.com) -  Using AI to create classical AIs at unprecedented scale!
+        - [Ai-by-Ai](https://mmulet.github.io/ai-by-ai) -  Using AI to create classical AIs at unprecedented scale!
         ### ScreenShot:
       img(src="/static/ai-by-ai-screenshot.png", style="width: 100%;")
     .box
-      a(href="https://jellyml.com")
+      a(href="https://mmulet.github.io/jellyml")
         img(src="/static/jellyml-logo.png", style="width: 100%;")
       :plain-markdown
-        - [JellyML](https://jellyml.com) -  An open-source tool for improving reproducibility in ML research workflows by adding a snapshot of the experiment code to a Pytorch model save file.
+        - [JellyML](https://mmulet.github.io/jellyml) -  An open-source tool for improving reproducibility in ML research workflows by adding a snapshot of the experiment code to a Pytorch model save file.
 
         ### Screenshot of the CLI:
       img(src="/static/jellyml-screenshot.png", style="width: 100%;")
