added term.everything to the portfolio

--- a/client/templates/index.pug
+++ b/client/templates/index.pug
@@ -119,8 +119,9 @@ html(lang="en")
       :plain-markdown
           ## My Projects
     .box
-      a(href="https://www.coderelay.io/fontemon.html")
-        img(src="/static/fontemon-logo.png")
+      div(style="display: flex; justify-content: center;")
+        a(href="https://www.coderelay.io/fontemon.html")
+          img(src="/static/fontemon-logo.png")
       :plain-markdown
         - [Fontemon](https://www.coderelay.io/fontemon.html) - A pokemon parody in a font. The world's first full video game in a font!
       img(src="/static/fontemon-screenshot.png")
@@ -132,6 +133,13 @@ html(lang="en")
         = [Rock Paper Shotgun](https://www.rockpapershotgun.com/fontemon-is-a-pokemon-parody-inside-a-font-somehow)
         - [Gizmodo](https://gizmodo.com/this-game-reimagines-pokemon-as-a-playable-font-where-c-1846520824)
         - [Hacker news](https://news.ycombinator.com/item?id=26495059)
+    .box
+      div(style="display: flex; justify-content: center;")
+        a(href="https://github.com/mmulet/term.everything")
+          img(src="/static/term.everything_icon.png", style="width: 256px;")
+      :plain-markdown
+        - [term.everything❗](https://github.com/mmulet/term.everything) -  Run any GUI app in the terminal❗. Specifically, term.everything❗ is a built-from-scratch Wayland compositor that outputs to a terminal rather than your monitor. Written in Typescript with Bun.
+      img(src="/static/warp_in_2.gif", style="width: 100%;")
     .box
       a(href="https://mmulet.github.io/hack-words")
         img(src="/static/hack-words-logo.png", style="width: 100%;")
